    otherwise). A config option "hostkey" is added so
    that you can specify it from config file. (Wengier)
  - SDL1 builds updated to use newer audio APIs on
    macOS (Mac OS X) so that audio works once again
    when compiled and run on Mac OS X Big Sur. Prior
    to the change, ancient versions of the API dating
    back to the mid 2000s were used which no longer
    work on Big Sur.
  - The system menu in Windows SDL1 builds is now also
    available for Windows SDL2 builds, and menu items
    "Reset font size", "Increase TTF font size" and
    "Decrease TTF font size" are added. (Wengier)
  - Enhanced the mapper editor interface to allow more
    keyboard shortcuts to be added, shown in multiple
    pages in the mapper, navigable with the "Previous
    Page" and "Next Page" buttons. The text in the
    grids are now longer and clearer too. The default
    shortcuts for a few items are changed to use the
    Host key style (e.g. Host+S and Host+L for saving
    and loading states respectively). (Wengier)
  - Added menu item "List network interfaces" under
    "Help" menu to list network interfaces in the host
    system for the NE2000 feature. (Wengier)
  - Added menu group "DOS commands" under "Help" menu
    to display the help content for the selected DOS
    shell command (DIR, CD, etc). (Wengier)
  - Configuration Tool now provides the option to save
    to the primary or user config files. (Wengier)
  - Certain config options (e.g. doublescan) that were
    marked as advanced options are now general config
    options and will appear in dosbox-x.reference.conf
    apart from dosbox-x.reference.full.conf. (Wengier)
  - Added config options "saveremark" (default: true)
    and "forceloadstate" (default: false) in [dosbox]
    section which can be used to control if DOSBox-X
    should ask users to enter remarks when saving a
    state or show warnings when loading a saved state
    if there is a mismatch found. (Wengier)